@@ -5,8 +5,8 @@ Description: Builds platform design information packages.
   data such as x, y position on chip and
   featureSet ID. The database also incorporates featureSet-level
   annotation data. The products of this packages are used by the oligo pkg.
-Version: 1.19.0
-Author: Seth Falcon, Benilton Carvalho with contributions by Vince Carey and Matt Settles
+Version: 1.19.1
+Author: Seth Falcon, Benilton Carvalho with contributions by Vince Carey, Matt Settles and Kristof de Beuf
 Maintainer: Benilton Carvalho <Benilton.Carvalho@cancer.org.uk>
 LazyLoad: yes
 Depends: R (>= 2.11.0),
